--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,16 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+# Link to .sssh config file
+.sssh
+
+# Yarn Lock
+yarn.lock
+
+
+# VS Code
+.vscode
+
 # Runtime data
 pids
 *.pid
